--- a/templates/customers.html
+++ b/templates/customers.html
@@ -29,7 +29,7 @@
             <div style="background-color: whitesmoke; padding: 1rem; padding-bottom: 2rem;">
                 <h2 class="subtitle">Orders</h2>
                 <div id="htmx-target">
-                    <div hx-get="[[=URL('customer_orders', vars=dict(parent_id=parent_id)) ]]" hx-trigger="load" hx-target="this">
+                    <div hx-get="[[=URL('customer_orders', vars=dict(parent_id=parent_id)) ]]" hx-trigger="load" hx-target="#htmx-target">
                         <img class="htmx-indicator" src="[[=URL('static', 'images/spinner.gif')]]" height="20"/>
                     </div>
                 </div>
