update htmx autocomplete to new forms processing

--- a/templates/htmx/form.html
+++ b/templates/htmx/form.html
@@ -13,7 +13,7 @@
                 </label>
             </td>
             <td>
-                [[=form.custom.wrapped_widgets[field] ]]
+                [[=form.custom.wrappers[field] ]]
                 [[if field in form.custom['errors']: ]]
                     <p class="help is-danger">[[=form.custom['errors'][field] ]]</p>
                 [[pass]]
