--- a/templates/htmx/grid.html
+++ b/templates/htmx/grid.html
@@ -22,7 +22,7 @@
 <div class="container">
     [[if grid.action in ['details', 'edit']:]]
     <div class="columns">
-        <div class="column is-6">
+        <div class="column">
             [[form = grid.render()]]
             [[=form]]
         </div>
