--- a/templates/customers.html
+++ b/templates/customers.html
@@ -1,19 +1,19 @@
 [[extend 'layout.html']]
 <script type="text/javascript">
-[[if grid.action == 'select':]]
+[[if grid.mode == 'select':]]
     window.addEventListener("load",function() {
         var form = document.forms[0];
         if (form != null) {
             form.addEventListener("submit", function (e1) {
                 e1.preventDefault();
-                var action = new URL(form.action);
+                var action = new URL(form.mode);
                 for (var i = 0; i < form.elements.length; i++) {
                     var e = form.elements[i];
                     if (e.name.substring(0, 3) === 'sq_') {
                         action.searchParams.set(encodeURIComponent(e.name), encodeURIComponent(e.value));
                     }
                 }
-                form.action = action
+                form.mode = action
                 form.submit();
             });
         }
@@ -21,7 +21,7 @@
 [[pass]]
 </script>
 <div class="container">
-    [[if grid.action in ['details', 'edit']:]]
+    [[if grid.mode in ['details', 'edit']:]]
     <div class="columns">
         <div class="column is-6">
             [[form = grid.render()]]
