--- a/templates/orders.html
+++ b/templates/orders.html
@@ -1,44 +1,14 @@
 [[extend 'layout.html']]
-<script type="text/javascript">
-[[if grid.mode == 'select':]]
-    window.addEventListener("load",function() {
-        var form = document.forms[0];
-        if (form != null) {
-            form.addEventListener("submit", function (e1) {
-                e1.preventDefault();
-                var action = new URL(form.mode);
-                for (var i = 0; i < form.elements.length; i++) {
-                    var e = form.elements[i];
-                    if (e.name.substring(0, 3) === 'sq_') {
-                        action.searchParams.set(encodeURIComponent(e.name), encodeURIComponent(e.value));
-                    }
-                }
-                form.mode = action
-                form.submit();
-            });
-        }
-    });
-[[pass]]
-</script>
-<div class="container">
-    [[if grid.mode in ['details', 'edit']:]]
-    <div class="columns">
-        <div class="column is-6">
-            [[form = grid.render()]]
-            <hr>
-            <h2 class="subtitle">Order [[=parent_id]]</h2>
-            [[=form]]
-            <div style="background-color: whitesmoke; padding: 1rem; padding-bottom: 2rem;">
-                <h2 class="subtitle">Line Items</h2>
-                <div id="htmx-target">
-                    <div hx-get="[[=URL('order_lines', vars=dict(parent_id=parent_id)) ]]" hx-trigger="load" hx-target="#htmx-target">
-                        <img class="htmx-indicator" src="[[=URL('static', 'images/spinner.gif')]]" height="20"/>
-                    </div>
-                </div>
+<div class="container" hx-boost="true">
+    [[=grid.render()]]
+    [[if grid.mode != "select":]]
+    <div style="background-color: whitesmoke; padding: 1rem; padding-bottom: 2rem;">
+        <h2 class="subtitle">Line Items</h2>
+        <div id="htmx-target" hx-boost="true" hx-target="#htmx-target">
+            <div hx-get="[[=URL('order_lines', vars=dict(parent_id=parent_id)) ]]" hx-trigger="load">
+                <img class="htmx-indicator" src="[[=URL('static', 'images/spinner.gif')]]" height="20"/>
             </div>
         </div>
     </div>
-    [[else:]]
-        [[=grid.render()]]
     [[pass]]
 </div>
